- SplashActivity 추가 - manifest파일 수정 - strings 리소스 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,26 @@
           package="tistory.zxcv5500.currencies"
 	>
 
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
 	<application
 		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
+		android:icon="@android:color/transparent"
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme"
 		>
-		<activity android:name=".MainActivity">
+		<activity
+			android:icon="@mipmap/ic_launcher"
+			android:name=".MainActivity"
+			>
+
+		</activity>
+		<activity
+			android:name=".SplashActivity"
+			android:label="@string/title_activity_splash"
+			>
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
